src/objects/SPE_PITempValue__c.object
<CustomObject>
    <fields>
        <fullName>BUScope__c</fullName>
        <label>BU Scope</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BusinessLine__c</fullName>
        <label>Business Line</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BusinessUnit__c</fullName>
        <label>Business Unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CategoryGroup__c</fullName>
        <label>Category Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CategoryScope__c</fullName>
        <label>Category Scope</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cluster__c</fullName>
        <label>Category Cluster</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EnterpriseIDEncrypted__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Look up(with Supplier) Enterprise Id field to replace the Enterprise Id text field in all codes. Enterprise Id Text field will be as it is in all layouts.</description>
        <label>EnterpriseMapping Key</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>PI Temp Values</relationshipLabel>
        <relationshipName>PI_Temp_Values_EnterpriseLookup</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EnterpriseId__c</fullName>
        <encrypted>true</encrypted>
        <label>Enterprise Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExecutionPeriod__c</fullName>
        <label>Execution Period</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GeoScope__c</fullName>
        <label>Geo Scope</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Index__c</fullName>
        <formula>KPICalculation__r.Index__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Index</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsConstant__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Constant</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KPICalculation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>KPI Calculation</label>
        <referenceTo>SPE_KPICalculation__c</referenceTo>
        <relationshipLabel>PI Temp Values</relationshipLabel>
        <relationshipName>PI_Temp_Values</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>KPIDefinition__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>KPI Definition</label>
        <referenceTo>SPE_KPIDefinition__c</referenceTo>
        <relationshipLabel>PI Temp Values</relationshipLabel>
        <relationshipName>PI_Temp_Values</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MappingScope__c</fullName>
        <formula>CASESAFEID(EnterpriseIDEncrypted__r.Id) + &apos;;&apos; +  BusinessLine__c + &apos;;&apos; + BusinessUnit__c + &apos;;&apos; + Category__c + &apos;;&apos; + CategoryGroup__c + &apos;;&apos;+ Cluster__c + &apos;;&apos; + Country__c + &apos;;&apos; + Region__c+ &apos;;&apos; + SubRegion__c+ &apos;;&apos; +  Project__c + &apos;;&apos; +  Product__c  + &apos;;&apos;+ ExecutionPeriod__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MappingScope</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PIValue__c</fullName>
        <label>PI Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PI_Temp_Value_Text__c</fullName>
        <label>PI Temp Value Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Period__c</fullName>
        <label>Period</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Market</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scope__c</fullName>
        <label>Scope</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubRegion__c</fullName>
        <label>Market Unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ValueType__c</fullName>
        <label>Value Type</label>
        <picklist>
            <picklistValues>
                <fullName>Number</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Date</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>PI Temp Value</label>
    <nameField>
        <displayFormat>PTVI-{00000}</displayFormat>
        <label>PI Temp Values Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PI Temp Values</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>